# ot-sku

./: .flake8  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  REPO.bazel  REUSE.toml  extension.bzl  hook.bzl
quality/: BUILD.bazel
skus/: .gitignore  BUILD.bazel  cfg.bzl  downstream.bzl  extras.json
skus/example/: BUILD  ft_ext_lib.rs  personalize_ext.c
skus/open/: BUILD  ft_ext_lib.rs  personalize_ext.c
skus/open/binaries/owner_fw/: BUILD
skus/open/binaries/perso/: BUILD
skus/open/binaries/rom_ext/: BUILD
skus/open/fake_keygen/: README.md  init_softhsm.sh  keygen_and_export.sh  softhsm_sourceme.sh
skus/open/fake_keygen/application/: export.json5  export_public.json5  keygen.json5
skus/open/fake_keygen/ca/: export.json5  export_public.json5  keygen.json5
skus/open/fake_keygen/data/aeb38e31-2d1f-8104-ac52-15e7a646e81d/: 0098353a-6d7b-1c2d-a3fc-8360b434a7fb.object  05ca2099-fa08-26bb-d192-b4f265f30475.object  0ae85179-abac-919e-00d4-b29f3c118dd5.object  0d942d0e-7caa-e684-721f-e752437dc37b.object  176745e9-f13a-6b76-796c-a9c27cd8c549.object  2995e455-9b83-f54b-48c5-4e177ad2530a.object  2a4d3824-1c0d-cdf3-9d4d-20e34359e4d2.object  3886e753-f071-4d10-4836-f936625dc235.object  508e6683-0609-1139-8e9c-e9aac7a17bca.object  71bcc551-0560-c7d6-9490-e46df408d326.object  734246a7-63e0-6fea-09a4-5c5de3641cf0.object  7ebcd6e0-04d1-aaf2-121c-efd9a5e792ab.object  7f9b3c65-6aa5-a290-669d-06b624ac9aca.object  89d97812-4b5d-2708-582f-6b9d3f4f0df3.object  8b0f681f-0e8c-0825-c542-d424fda5428f.object  9496cbd6-b2c2-d6d5-b3b8-a9482f2b23cf.object  97df2f9c-0eb5-8e60-f269-2eb95c33a530.object  9c5dbbbe-c862-8bfb-41ce-75406981f935.object  9e6e9425-8d7c-7675-c86e-038f27cd6932.object  a4e26177-3933-bb5c-53af-66726babe390.object  af94ba96-8d73-5f16-2b54-71c58b88dcf4.object  b7bef4c4-9003-c6eb-704a-7cc406eaf57d.object  bf6536ae-895a-dce7-a06c-cb670e5d5476.object  c08ad608-ffbd-3a73-a8db-c48efe3235a3.object  c90fefcf-41d9-4d4a-6297-e819f4a4c8de.object  d43029e6-a30d-c25c-f518-9409d0c68009.object  d433a8c7-c29b-766f-5344-e10cbe0c177d.object  dc317c92-e641-f375-24f5-f784dbc6ffdc.object  eab80dcc-9ae7-c887-dfec-0c2a4750dcbf.object  ef7a6b2f-3dfa-20b3-b0d0-5103449d0281.object  f1e045fc-e215-9d25-6a37-a24fad4eeb58.object  f510c07b-97a0-b159-46ac-12a1e995b4e6.object  token.object
skus/open/fake_keygen/owner/: export.json5  export_public.json5  keygen.json5
skus/open/fake_keygen/root/: export.json5  export_public.json5  keygen.json5
skus/open/keys/: BUILD
skus/open/keys/ca/: BUILD  README.md  dice_ca.pem  nuvoton-ot00-ca-ecdsa-0.pub.der
skus/open/keys/owner/: BUILD  README.md  nuvoton-ot00-activate-ecdsa-0.pub.der  nuvoton-ot00-activate-slhdsa-0.pub.pem  nuvoton-ot00-app-ecdsa-dev-0.pub.der  nuvoton-ot00-app-ecdsa-prod-0.pub.der  nuvoton-ot00-app-ecdsa-prod-1.pub.der  nuvoton-ot00-app-slhdsa-dev-0.pub.pem  nuvoton-ot00-app-slhdsa-prod-0.pub.pem  nuvoton-ot00-app-slhdsa-prod-1.pub.pem  nuvoton-ot00-owner-ecdsa-0.pub.der  nuvoton-ot00-owner-slhdsa-0.pub.pem  nuvoton-ot00-unlock-ecdsa-0.pub.der  nuvoton-ot00-unlock-slhdsa-0.pub.pem
skus/open/keys/root/: BUILD  ot00-earlgrey-a2-root-ecdsa-dev-0.pub.der  ot00-earlgrey-a2-root-ecdsa-prod-0.pub.der  ot00-earlgrey-a2-root-ecdsa-prod-1.pub.der  ot00-earlgrey-a2-root-ecdsa-prod-2.pub.der  ot00-earlgrey-a2-root-slhdsa-dev-0.pub.pem  ot00-earlgrey-a2-root-slhdsa-prod-0.pub.pem  ot00-earlgrey-a2-root-slhdsa-prod-1.pub.pem  ot00-earlgrey-a2-root-slhdsa-prod-2.pub.pem
skus/open/orchestrator/: BUILD  emulation_open.hjson  ot00.hjson  ot00_staging.hjson
skus/open/otp/ot00/: BUILD
skus/open/otp/ot00_emulation/: BUILD
skus/open/perso/: BUILD
skus/open/rom_ext/: BUILD  owner.c  owner.json5
skus/shared/otp/: common.bzl
skus/shared/repo/: BUILD.bazel  presign_bazel
(+6 files in other folders)
