# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

module(
    name = "ot_provisioning_exts",
    version = "0.0.1",
)

# Dev dependencies:
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
bazel_dep(
    name = "lowrisc_misc_linters",
    dev_dependency = True,
)
archive_override(
    module_name = "lowrisc_misc_linters",
    integrity = "sha256-Nl/mfYFo/uGg/DrqS7gFiL9yHcT8g7QEY7CetQiXzaM=",
    strip_prefix = "misc-linters-20240823_01",
    urls = ["https://github.com/lowRISC/misc-linters/archive/refs/tags/20240823_01.tar.gz"],
)

# FIXME: unused?
# bazel_dep(name = "rules_python", version = "1.2.0")
#
# # Python toolchain:
# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     # Required because CI containers currently run as the `root` user.
#     # We lose caching of `.pyc` files as a result.
#     # See <https://github.com/bazelbuild/rules_python/pull/713>.
#     ignore_root_user_error = True,
#     is_default = True,
#     python_version = "3.9",
# )
# use_repo(python, "pythons_hub")
#
# register_toolchains("@pythons_hub//:all")
